--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -17,21 +17,22 @@ dependencies:
       - aiohappyeyeballs==2.4.3
       - aiohttp==3.10.10
       - aiosignal==1.3.1
-      - albucore==0.0.19
-      - albumentations==1.4.20
+      - albucore==0.0.20
+      - albumentations==1.4.21
       - altair==5.4.1
       - annotated-types==0.7.0
-      - anthropic==0.37.1
+      - anthropic==0.38.0
       - anyio==4.6.1
       - arena-api==2.5.9
       - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
+      - arrow==1.3.0
       - asttokens==2.4.1
       - async-lru==2.0.4
       - attrs==24.2.0
       - babel==2.16.0
       - beautifulsoup4==4.12.3
-      - bleach==6.1.0
+      - bleach==6.2.0
       - blinker==1.8.2
       - braincube-connector==2.6.0
       - cachetools==5.5.0
@@ -67,18 +68,19 @@ dependencies:
       - flask==3.0.3
       - fonttools==4.54.1
       - fpdf2==2.8.1
+      - fqdn==1.5.1
       - frozenlist==1.5.0
       - fsspec==2024.10.0
       - gitdb==4.0.11
       - gitpython==3.1.43
-      - google-api-core==2.21.0
+      - google-api-core==2.22.0
       - google-api-python-client==2.135.0
       - google-auth==2.35.0
       - google-auth-httplib2==0.2.0
       - google-auth-oauthlib==1.2.1
-      - google-cloud-aiplatform==1.70.0
+      - google-cloud-aiplatform==1.71.1
       - google-cloud-bigquery==3.26.0
-      - google-cloud-compute==1.19.2
+      - google-cloud-compute==1.20.1
       - google-cloud-core==2.4.1
       - google-cloud-pipeline-components==2.17.0
       - google-cloud-resource-manager==1.13.0
@@ -90,13 +92,14 @@ dependencies:
       - googleapis-common-protos==1.65.0
       - greenlet==3.1.1
       - grpc-google-iam-v1==0.13.1
-      - grpcio==1.67.0
+      - grpcio==1.67.1
       - grpcio-status==1.62.3
       - h11==0.14.0
       - h5py==3.12.1
       - httpcore==1.0.5
       - httplib2==0.22.0
       - httpx==0.27.2
+      - httpx-sse==0.4.0
       - huggingface-hub==0.26.2
       - idna==3.10
       - imageio==2.36.0
@@ -109,12 +112,13 @@ dependencies:
       - ipykernel==6.29.5
       - ipython==8.29.0
       - ipython-genutils==0.2.0
+      - isoduration==20.11.0
       - itsdangerous==2.2.0
       - jax==0.4.35
       - jaxlib==0.4.35
       - jedi==0.19.1
       - jinja2==3.1.4
-      - jiter==0.6.1
+      - jiter==0.7.0
       - joblib==1.4.2
       - json-numpy==2.1.0
       - json5==0.9.25
@@ -151,10 +155,10 @@ dependencies:
       - lightning-utilities==0.11.8
       - llama-cloud==0.1.4
       - llama-cpp-python==0.3.1
-      - llama-index==0.11.20
+      - llama-index==0.11.21
       - llama-index-agent-openai==0.3.4
       - llama-index-cli==0.3.1
-      - llama-index-core==0.11.20
+      - llama-index-core==0.11.21
       - llama-index-embeddings-openai==0.2.5
       - llama-index-indices-managed-llama-cloud==0.4.0
       - llama-index-legacy==0.9.48.post3
@@ -165,17 +169,17 @@ dependencies:
       - llama-index-question-gen-openai==0.2.0
       - llama-index-readers-file==0.2.2
       - llama-index-readers-llama-parse==0.3.0
-      - llama-parse==0.5.12
+      - llama-parse==0.5.13
       - llamaindex-py-client==0.1.19
-      - llm==0.17
-      - llm-claude-3==0.6
+      - llm==0.17.1
+      - llm-claude-3==0.7
       - llvmlite==0.43.0
       - lmdb==1.5.1
       - lxml==5.3.0
       - markdown==3.7
       - markdown-it-py==3.0.0
       - markupsafe==3.0.2
-      - marshmallow==3.23.0
+      - marshmallow==3.23.1
       - matplotlib==3.9.2
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
@@ -186,7 +190,7 @@ dependencies:
       - mpmath==1.3.0
       - multidict==6.1.0
       - mypy-extensions==1.0.0
-      - narwhals==1.11.0
+      - narwhals==1.13.1
       - nbclient==0.10.0
       - nbconvert==7.16.4
       - nbformat==5.10.4
@@ -199,15 +203,15 @@ dependencies:
       - numpy==1.26.4
       - oauthlib==3.2.2
       - ollama==0.3.3
-      - openai==1.52.2
+      - openai==1.53.0
       - opencv-contrib-python==4.10.0.84
       - opencv-python==4.10.0.84
       - opencv-python-headless==4.10.0.84
       - openinference-instrumentation==0.1.18
-      - openinference-instrumentation-langchain==0.1.28
-      - openinference-instrumentation-llama-index==3.0.2
-      - openinference-instrumentation-openai==0.1.14
-      - openinference-semantic-conventions==0.1.11
+      - openinference-instrumentation-langchain==0.1.29
+      - openinference-instrumentation-llama-index==3.0.3
+      - openinference-instrumentation-openai==0.1.17
+      - openinference-semantic-conventions==0.1.12
       - opentelemetry-api==1.27.0
       - opentelemetry-exporter-otlp==1.27.0
       - opentelemetry-exporter-otlp-proto-common==1.27.0
@@ -218,7 +222,7 @@ dependencies:
       - opentelemetry-sdk==1.27.0
       - opentelemetry-semantic-conventions==0.48b0
       - opt-einsum==3.4.0
-      - orjson==3.10.10
+      - orjson==3.10.11
       - overrides==7.7.0
       - packaging==23.2
       - pandas==2.2.3
@@ -238,14 +242,14 @@ dependencies:
       - psutil==6.1.0
       - pure-eval==0.2.3
       - puremagic==1.28
-      - pyarrow==17.0.0
+      - pyarrow==18.0.0
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.1
       - pycodestyle==2.12.1
       - pycparser==2.22
       - pydantic==2.9.2
       - pydantic-core==2.23.4
-      - pydantic-settings==2.6.0
+      - pydantic-settings==2.6.1
       - pydata-google-auth==1.8.2
       - pydeck==0.9.1
       - pyflakes==3.2.0
@@ -276,16 +280,17 @@ dependencies:
       - requests-toolbelt==0.10.1
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
-      - rich==13.9.3
-      - rpds-py==0.20.0
+      - rich==13.9.4
+      - rpds-py==0.20.1
       - rsa==4.9
-      - ruff==0.7.1
+      - ruff==0.7.2
       - scikit-image==0.24.0
       - scipy==1.14.1
       - segment-anything==1.0
       - send2trash==1.8.3
-      - setuptools==75.2.0
+      - setuptools==75.3.0
       - shapely==2.0.6
+      - simsimd==5.9.11
       - six==1.16.0
       - smmap==5.0.1
       - sniffio==1.3.1
@@ -296,7 +301,7 @@ dependencies:
       - sqlite-utils==3.37
       - stack-data==0.6.3
       - streamlit==1.39.0
-      - stringzilla==3.10.5
+      - stringzilla==3.10.7
       - striprtf==0.0.26
       - sympy==1.13.3
       - tabulate==0.9.0
@@ -314,23 +319,26 @@ dependencies:
       - torchmetrics==1.5.1
       - torchvision==0.19.1+cu124
       - tornado==6.4.1
-      - tqdm==4.66.5
+      - tqdm==4.66.6
       - traitlets==5.14.3
+      - types-python-dateutil==2.9.0.20241003
       - typing-extensions==4.12.2
       - typing-inspect==0.9.0
       - tzdata==2024.2
       - umf==0.9.0
+      - uri-template==1.3.0
       - uritemplate==4.1.1
       - urllib3==1.26.19
       - watchdog==5.0.3
       - wcwidth==0.2.13
+      - webcolors==24.8.0
       - webencodings==0.5.1
       - websocket-client==1.8.0
-      - werkzeug==3.0.6
+      - werkzeug==3.1.1
       - wheel==0.44.0
       - wrapt==1.16.0
       - xlsxwriter==3.2.0
-      - yarl==1.16.0
+      - yarl==1.17.1
       - yoctopuce==2.0.62875
       - zipp==3.20.2
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_gpu
