--- a/architecture/MacOSX-x86_64/py_env_nia_conda_env_export.yml
+++ b/architecture/MacOSX-x86_64/py_env_nia_conda_env_export.yml
@@ -23,17 +23,17 @@ dependencies:
       - asttokens==2.4.1
       - attrs==24.2.0
       - beautifulsoup4==4.12.3
-      - bleach==6.1.0
-      - blinker==1.8.2
+      - bleach==6.2.0
+      - blinker==1.9.0
       - cachetools==5.5.0
       - certifi==2024.8.30
       - cffi==1.17.1
       - charset-normalizer==3.4.0
       - click==8.1.7
       - comm==0.2.2
-      - contourpy==1.3.0
+      - contourpy==1.3.1
       - cycler==0.12.1
-      - debugpy==1.8.7
+      - debugpy==1.8.8
       - decorator==5.1.1
       - defusedxml==0.7.1
       - dnspython==2.7.0
@@ -43,33 +43,34 @@ dependencies:
       - fastjsonschema==2.20.0
       - filelock==3.16.1
       - flake8==7.1.1
-      - flask==3.0.3
-      - fonttools==4.54.1
+      - flask==3.1.0
+      - fonttools==4.55.0
       - fpdf2==2.8.1
       - fqdn==1.5.1
       - fsspec==2024.10.0
-      - google-api-core==2.21.0
+      - google-api-core==2.23.0
       - google-api-python-client==2.102.0
-      - google-auth==2.35.0
+      - google-auth==2.36.0
       - google-auth-httplib2==0.2.0
       - google-auth-oauthlib==1.2.1
-      - google-cloud-aiplatform==1.70.0
-      - google-cloud-artifact-registry==1.12.0
-      - google-cloud-bigquery==3.26.0
+      - google-cloud-aiplatform==1.72.0
+      - google-cloud-artifact-registry==1.13.1
+      - google-cloud-bigquery==3.27.0
       - google-cloud-bigquery-storage==2.27.0
       - google-cloud-core==2.4.1
       - google-cloud-datastore==2.20.1
-      - google-cloud-discoveryengine==0.13.1
-      - google-cloud-documentai==2.35.0
-      - google-cloud-language==2.15.0
-      - google-cloud-monitoring==2.23.0
-      - google-cloud-resource-manager==1.13.0
+      - google-cloud-discoveryengine==0.13.4
+      - google-cloud-documentai==3.0.1
+      - google-cloud-language==2.15.1
+      - google-cloud-monitoring==2.23.1
+      - google-cloud-resource-manager==1.13.1
       - google-cloud-storage==2.18.2
       - google-crc32c==1.6.0
       - google-resumable-media==2.7.2
-      - googleapis-common-protos==1.65.0
+      - googleapis-common-protos==1.66.0
       - grpc-google-iam-v1==0.13.1
-      - grpcio==1.67.0
+      - grpcio==1.67.1
+      - grpcio-status==1.67.1
       - h5py==3.12.1
       - httplib2==0.22.0
       - idna==3.10
@@ -78,7 +79,7 @@ dependencies:
       - ipykernel==6.29.5
       - ipython==8.29.0
       - itsdangerous==2.2.0
-      - jedi==0.19.1
+      - jedi==0.19.2
       - jinja2==3.1.4
       - jsonschema==4.23.0
       - jsonschema-specifications==2024.10.1
@@ -112,7 +113,7 @@ dependencies:
       - opencv-python==4.10.0.84
       - opencv-python-headless==4.10.0.84
       - overrides==7.7.0
-      - packaging==24.1
+      - packaging==24.2
       - pandas==2.2.3
       - pandocfilters==1.5.1
       - parso==0.8.4
@@ -129,7 +130,7 @@ dependencies:
       - psutil==6.1.0
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
-      - pyarrow==17.0.0
+      - pyarrow==18.0.0
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.1
       - pycodestyle==2.12.1
@@ -140,6 +141,7 @@ dependencies:
       - pyflakes==3.2.0
       - pygments==2.18.0
       - pyparsing==3.2.0
+      - pyqtree==1.0.0
       - python-dateutil==2.9.0
       - python-json-logger==2.0.7
       - pytz==2024.2
@@ -152,14 +154,14 @@ dependencies:
       - requests-oauthlib==2.0.0
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
-      - rpds-py==0.20.0
+      - rpds-py==0.21.0
       - rsa==4.9
-      - ruff==0.7.1
+      - ruff==0.7.3
       - scikit-image==0.24.0
       - scipy==1.14.1
       - seaborn==0.13.2
       - send2trash==1.8.3
-      - setuptools==75.2.0
+      - setuptools==75.5.0
       - shapely==2.0.6
       - six==1.16.0
       - sniffio==1.3.1
@@ -172,7 +174,7 @@ dependencies:
       - tinycss2==1.4.0
       - torch==2.2.2
       - tornado==6.4.1
-      - tqdm==4.66.5
+      - tqdm==4.67.0
       - traitlets==5.14.3
       - types-python-dateutil==2.9.0.20241003
       - typing-extensions==4.12.2
@@ -182,10 +184,10 @@ dependencies:
       - wcwidth==0.2.13
       - webencodings==0.5.1
       - websocket-client==1.8.0
-      - werkzeug==3.0.6
-      - wheel==0.44.0
+      - werkzeug==3.1.3
+      - wheel==0.45.0
       - widgetsnbextension==4.0.13
       - xlsxwriter==3.2.0
       - yoctopuce==2.0.62875
-      - zipp==3.20.2
+      - zipp==3.21.0
 prefix: /Users/markusmaresch/miniconda3/envs/py_env_nia
