--- a/architecture/Linux-aarch64/py_env_bvm_conda_env_export.yml
+++ b/architecture/Linux-aarch64/py_env_bvm_conda_env_export.yml
@@ -1,101 +1,104 @@
 name: py_env_bvm
 channels:
   - defaults
+  - https://repo.anaconda.com/pkgs/main
+  - https://repo.anaconda.com/pkgs/r
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=51_gnu
-  - bzip2=1.0.8=hfd63f10_2
-  - ca-certificates=2023.12.12=hd43f75c_0
-  - ld_impl_linux-aarch64=2.38=h8131f2d_1
-  - libffi=3.4.4=h419075a_0
+  - bzip2=1.0.8=h998d150_6
+  - ca-certificates=2024.9.24=hd43f75c_0
+  - expat=2.6.3=h419075a_0
+  - ld_impl_linux-aarch64=2.40=h48e3ba3_0
+  - libffi=3.4.4=h419075a_1
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.41.5=h998d150_0
   - ncurses=6.4=h419075a_0
-  - openssl=3.0.12=h2f4d8fa_0
-  - python=3.11.7=h4bb2201_0
+  - openssl=3.0.15=h998d150_0
+  - python=3.12.7=h8edadfe_0
   - readline=8.2=h998d150_0
-  - sqlite=3.41.2=h998d150_0
-  - xz=5.4.5=h998d150_0
-  - zlib=1.2.13=h998d150_0
+  - sqlite=3.45.3=h998d150_0
+  - xz=5.4.6=h998d150_1
+  - zlib=1.2.13=h998d150_1
   - pip:
       - ansi2html==1.9.2
-      - arena-api==2.3.3
+      - arena-api==2.5.9
       - asttokens==2.4.1
       - attrs==24.2.0
-      - av==12.3.0
+      - av==13.1.0
       - backcall==0.2.0
       - beautifulsoup4==4.12.3
-      - bleach==6.1.0
-      - blinker==1.8.2
+      - bleach==6.2.0
+      - blinker==1.9.0
       - braincube-connector==2.6.0
       - cachetools==5.5.0
-      - certifi==2024.7.4
-      - charset-normalizer==3.3.2
+      - certifi==2024.8.30
+      - charset-normalizer==3.4.0
       - click==8.1.7
       - colorama==0.4.6
       - comm==0.2.2
       - compress-pickle==2.1.0
       - configargparse==1.7
-      - contourpy==1.2.1
+      - contourpy==1.3.1
       - cycler==0.12.1
       - cylinder-fitting==1.1.4
-      - dash==2.17.1
+      - dash==2.18.2
       - dash-core-components==2.0.0
       - dash-html-components==2.0.0
       - dash-table==5.0.0
-      - debugpy==1.8.5
+      - debugpy==1.8.9
       - decorator==5.1.1
       - defusedxml==0.7.1
-      - deprecated==1.2.14
-      - dill==0.3.8
-      - dnspython==2.6.1
+      - deprecated==1.2.15
+      - dill==0.3.9
+      - dnspython==2.7.0
       - docopt==0.6.2
       - email-validator==2.2.0
       - entrypoints==0.4
       - exceptiongroup==1.2.2
-      - executing==2.0.1
+      - executing==2.1.0
       - fastjsonschema==2.20.0
       - flake8==7.1.1
       - flask==3.0.3
-      - fonttools==4.53.1
-      - google-api-core==2.19.1
-      - google-auth==2.34.0
-      - google-cloud-bigquery==3.25.0
+      - fonttools==4.55.0
+      - google-api-core==2.23.0
+      - google-auth==2.36.0
+      - google-cloud-bigquery==3.27.0
       - google-cloud-core==2.4.1
       - google-cloud-storage==2.18.2
-      - google-crc32c==1.5.0
+      - google-crc32c==1.6.0
       - google-resumable-media==2.7.2
-      - googleapis-common-protos==1.63.2
-      - grpcio==1.65.5
-      - grpcio-status==1.65.5
+      - googleapis-common-protos==1.66.0
+      - grpcio==1.68.0
+      - grpcio-status==1.68.0
       - h5py==3.12.1
-      - idna==3.7
-      - imageio==2.35.1
-      - importlib-metadata==7.0.2
-      - importlib-resources==6.4.4
+      - idna==3.10
+      - imageio==2.36.0
+      - importlib-metadata==8.5.0
+      - importlib-resources==6.4.5
       - imutils==0.5.4
       - iniconfig==2.0.0
       - ipykernel==6.29.5
       - ipython==8.12.3
-      - ipywidgets==8.1.3
+      - ipywidgets==8.1.5
       - itsdangerous==2.2.0
-      - jedi==0.19.1
+      - jedi==0.19.2
       - jinja2==3.1.4
       - joblib==1.4.2
       - jsonschema==4.23.0
-      - jsonschema-specifications==2023.12.1
-      - jupyter-client==8.6.2
+      - jsonschema-specifications==2024.10.1
+      - jupyter-client==8.6.3
       - jupyter-core==5.7.2
       - jupyterlab-pygments==0.3.0
-      - jupyterlab-widgets==3.0.11
-      - kiwisolver==1.4.5
+      - jupyterlab-widgets==3.0.13
+      - kiwisolver==1.4.7
       - laspy==2.5.4
       - lazy-loader==0.4
       - llvmlite==0.43.0
       - lmdb==1.5.1
-      - markupsafe==2.1.5
+      - markupsafe==3.0.2
       - matplotlib==3.9.2
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
@@ -104,86 +107,87 @@ dependencies:
       - nbconvert==7.16.4
       - nbformat==5.10.4
       - nest-asyncio==1.6.0
-      - networkx==3.3
+      - networkx==3.4.2
       - numba==0.60.0
-      - numpy==1.26.3
+      - numpy==2.0.2
       - opencv-contrib-python==4.10.0.84
       - opencv-python==4.10.0.84
       - opencv-python-headless==4.10.0.84
-      - opentelemetry-api==1.26.0
-      - opentelemetry-instrumentation==0.47b0
-      - packaging==24.1
-      - pandas==2.2.2
+      - opentelemetry-api==1.28.2
+      - opentelemetry-instrumentation==0.49b2
+      - opentelemetry-semantic-conventions==0.49b2
+      - packaging==24.2
+      - pandas==2.2.3
       - pandocfilters==1.5.1
       - parso==0.8.4
       - pexpect==4.9.0
       - pickleshare==0.7.5
-      - pillow==10.4.0
-      - pip==24.2
+      - pillow==11.0.0
+      - pip==24.3.1
       - pipreqs==0.5.0
-      - platformdirs==4.2.2
-      - plotly==5.23.0
+      - platformdirs==4.3.6
+      - plotly==5.24.1
       - pluggy==1.5.0
       - plyfile==1.1
-      - polars==1.5.0
-      - prompt-toolkit==3.0.47
-      - proto-plus==1.24.0
-      - protobuf==5.27.3
-      - psutil==6.0.0
+      - polars==1.15.0
+      - prompt-toolkit==3.0.48
+      - proto-plus==1.25.0
+      - protobuf==5.28.3
+      - psutil==6.1.0
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
       - py-cylinder-fitting==1.0.0
-      - pyarrow==17.0.0
-      - pyasn1==0.6.0
-      - pyasn1-modules==0.4.0
+      - pyarrow==18.1.0
+      - pyasn1==0.6.1
+      - pyasn1-modules==0.4.1
       - pycodestyle==2.12.1
       - pyflakes==3.2.0
       - pygments==2.18.0
       - pyoints==0.2.0a3
-      - pyparsing==3.1.2
+      - pyparsing==3.2.0
       - pyrsistent==0.20.0
       - pyserial==3.5
-      - pytest==8.3.2
-      - python-dateutil==2.9.0
-      - pytz==2024.1
+      - pytest==8.3.3
+      - python-dateutil==2.9.0.post0
+      - pytz==2024.2
       - pyzbar==0.1.9
       - pyzmq==26.2.0
       - referencing==0.35.1
       - requests==2.32.3
       - retrying==1.3.4
-      - rpds-py==0.20.0
+      - rpds-py==0.21.0
       - rsa==4.9
-      - ruff==0.6.1
+      - ruff==0.8.0
       - scikit-image==0.24.0
-      - scikit-learn==1.5.1
-      - scikit-spatial==7.2.0
+      - scikit-learn==1.5.2
+      - scikit-spatial==8.0.0
       - scipy==1.14.1
-      - setuptools==73.0.1
+      - setuptools==75.6.0
       - shapely==2.0.6
       - six==1.16.0
       - soupsieve==2.6
       - stack-data==0.6.3
       - tenacity==9.0.0
       - threadpoolctl==3.5.0
-      - tifffile==2024.8.10
-      - tinycss2==1.3.0
+      - tifffile==2024.9.20
+      - tinycss2==1.4.0
       - tinyflux==1.0.0
       - tk==0.1.0
-      - tomli==2.0.1
-      - tornado==6.4.1
+      - tomli==2.1.0
+      - tornado==6.4.2
       - traitlets==5.14.3
       - typing-extensions==4.12.2
-      - tzdata==2024.1
-      - urllib3==2.2.2
+      - tzdata==2024.2
+      - urllib3==2.2.3
       - wcwidth==0.2.13
       - webencodings==0.5.1
-      - werkzeug==3.0.4
-      - wheel==0.44.0
-      - widgetsnbextension==4.0.11
+      - werkzeug==3.0.6
+      - wheel==0.45.1
+      - widgetsnbextension==4.0.13
       - wincertstore==0.2.1
-      - wrapt==1.16.0
+      - wrapt==1.17.0
       - xlsxwriter==3.2.0
       - yarg==0.1.9
-      - yoctopuce==2.0.61813
-      - zipp==3.20.0
+      - yoctopuce==2.0.62875
+      - zipp==3.21.0
 prefix: /home/nvidia/miniconda3/envs/py_env_bvm
