--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -15,13 +15,14 @@ dependencies:
   - zlib=1.2.13=h8cc25b3_1
   - pip:
       - aiohappyeyeballs==2.4.3
-      - aiohttp==3.10.10
+      - aiohttp==3.11.8
       - aiosignal==1.3.1
+      - aisuite==0.1.6
       - albucore==0.0.20
       - albumentations==1.4.21
-      - altair==5.4.1
+      - altair==5.5.0
       - annotated-types==0.7.0
-      - anthropic==0.38.0
+      - anthropic==0.40.0
       - anyio==4.6.1
       - arena-api==2.5.9
       - argon2-cffi==23.1.0
@@ -33,7 +34,7 @@ dependencies:
       - babel==2.16.0
       - beautifulsoup4==4.12.3
       - bleach==6.2.0
-      - blinker==1.8.2
+      - blinker==1.9.0
       - braincube-connector==2.6.0
       - cachetools==5.5.0
       - certifi==2024.8.30
@@ -43,15 +44,15 @@ dependencies:
       - click-default-group==1.2.4
       - colorama==0.4.6
       - comm==0.2.2
-      - contourpy==1.3.0
+      - contourpy==1.3.1
       - cycler==0.12.1
       - cython==3.0.11
       - dataclasses-json==0.6.7
-      - db-dtypes==1.3.0
-      - debugpy==1.8.7
+      - db-dtypes==1.3.1
+      - debugpy==1.8.9
       - decorator==5.1.1
       - defusedxml==0.7.1
-      - deprecated==1.2.14
+      - deprecated==1.2.15
       - dirtyjson==1.0.8
       - diskcache==5.6.3
       - distro==1.9.0
@@ -62,37 +63,38 @@ dependencies:
       - email-validator==2.2.0
       - eval-type-backport==0.2.0
       - executing==2.1.0
-      - fastjsonschema==2.20.0
+      - fastjsonschema==2.21.0
       - filelock==3.16.1
+      - filetype==1.2.0
       - flake8==7.1.1
-      - flask==3.0.3
-      - fonttools==4.54.1
+      - flask==3.1.0
+      - fonttools==4.55.0
       - fpdf2==2.8.1
       - fqdn==1.5.1
       - frozenlist==1.5.0
       - fsspec==2024.10.0
       - gitdb==4.0.11
       - gitpython==3.1.43
-      - google-api-core==2.22.0
+      - google-api-core==2.23.0
       - google-api-python-client==2.135.0
-      - google-auth==2.35.0
+      - google-auth==2.36.0
       - google-auth-httplib2==0.2.0
       - google-auth-oauthlib==1.2.1
-      - google-cloud-aiplatform==1.71.1
-      - google-cloud-bigquery==3.26.0
-      - google-cloud-compute==1.20.1
+      - google-cloud-aiplatform==1.73.0
+      - google-cloud-bigquery==3.27.0
+      - google-cloud-compute==1.22.0
       - google-cloud-core==2.4.1
       - google-cloud-pipeline-components==2.17.0
-      - google-cloud-resource-manager==1.13.0
-      - google-cloud-secret-manager==2.21.0
+      - google-cloud-resource-manager==1.13.1
+      - google-cloud-secret-manager==2.21.1
       - google-cloud-storage==2.18.2
-      - google-cloud-vision==3.8.0
+      - google-cloud-vision==3.8.1
       - google-crc32c==1.6.0
       - google-resumable-media==2.7.2
-      - googleapis-common-protos==1.65.0
+      - googleapis-common-protos==1.66.0
       - greenlet==3.1.1
       - grpc-google-iam-v1==0.13.1
-      - grpcio==1.67.1
+      - grpcio==1.68.0
       - grpcio-status==1.62.3
       - h11==0.14.0
       - h5py==3.12.1
@@ -100,15 +102,15 @@ dependencies:
       - httplib2==0.22.0
       - httpx==0.27.2
       - httpx-sse==0.4.0
-      - huggingface-hub==0.26.2
+      - huggingface-hub==0.26.3
       - idna==3.10
-      - imageio==2.36.0
+      - imageio==2.36.1
       - importlib-metadata==8.4.0
       - importlib-resources==6.4.5
       - imutils==0.5.4
       - iniconfig==2.0.0
-      - intel-cmplr-lib-ur==2025.0.0
-      - intel-openmp==2025.0.0
+      - intel-cmplr-lib-ur==2025.0.2
+      - intel-openmp==2025.0.2
       - ipykernel==6.29.5
       - ipython==8.29.0
       - ipython-genutils==0.2.0
@@ -116,12 +118,12 @@ dependencies:
       - itsdangerous==2.2.0
       - jax==0.4.35
       - jaxlib==0.4.35
-      - jedi==0.19.1
+      - jedi==0.19.2
       - jinja2==3.1.4
-      - jiter==0.7.0
+      - jiter==0.8.0
       - joblib==1.4.2
       - json-numpy==2.1.0
-      - json5==0.9.25
+      - json5==0.10.0
       - jsonpatch==1.33
       - jsonpointer==3.0.0
       - jsonschema==4.23.0
@@ -136,7 +138,7 @@ dependencies:
       - jupyter-nbextensions-configurator==0.6.4
       - jupyter-server==2.14.2
       - jupyter-server-terminals==0.5.3
-      - jupyterlab==4.2.5
+      - jupyterlab==4.2.6
       - jupyterlab-pygments==0.3.0
       - jupyterlab-server==2.27.3
       - kfp==2.7.0
@@ -152,27 +154,27 @@ dependencies:
       - langsmith==0.1.129
       - lazy-loader==0.4
       - lightning==2.4.0
-      - lightning-utilities==0.11.8
-      - llama-cloud==0.1.4
+      - lightning-utilities==0.11.9
+      - llama-cloud==0.1.5
       - llama-cpp-python==0.3.1
-      - llama-index==0.11.21
+      - llama-index==0.11.23
       - llama-index-agent-openai==0.3.4
       - llama-index-cli==0.3.1
-      - llama-index-core==0.11.21
+      - llama-index-core==0.11.23
       - llama-index-embeddings-openai==0.2.5
-      - llama-index-indices-managed-llama-cloud==0.4.0
+      - llama-index-indices-managed-llama-cloud==0.6.0
       - llama-index-legacy==0.9.48.post3
-      - llama-index-llms-ollama==0.3.4
+      - llama-index-llms-ollama==0.3.6
       - llama-index-llms-openai==0.2.16
       - llama-index-multi-modal-llms-openai==0.2.3
       - llama-index-program-openai==0.2.0
       - llama-index-question-gen-openai==0.2.0
-      - llama-index-readers-file==0.2.2
+      - llama-index-readers-file==0.3.0
       - llama-index-readers-llama-parse==0.3.0
-      - llama-parse==0.5.13
+      - llama-parse==0.5.15
       - llamaindex-py-client==0.1.19
-      - llm==0.17.1
-      - llm-claude-3==0.7
+      - llm==0.18
+      - llm-claude-3==0.9
       - llvmlite==0.43.0
       - lmdb==1.5.1
       - lxml==5.3.0
@@ -185,12 +187,12 @@ dependencies:
       - mccabe==0.7.0
       - mdurl==0.1.2
       - mistune==3.0.2
-      - mkl==2025.0.0
+      - mkl==2025.0.1
       - ml-dtypes==0.5.0
       - mpmath==1.3.0
       - multidict==6.1.0
       - mypy-extensions==1.0.0
-      - narwhals==1.13.1
+      - narwhals==1.14.3
       - nbclient==0.10.0
       - nbconvert==7.16.4
       - nbformat==5.10.4
@@ -202,15 +204,15 @@ dependencies:
       - numba==0.60.0
       - numpy==1.26.4
       - oauthlib==3.2.2
-      - ollama==0.3.3
-      - openai==1.53.0
+      - ollama==0.4.1
+      - openai==1.55.3
       - opencv-contrib-python==4.10.0.84
       - opencv-python==4.10.0.84
       - opencv-python-headless==4.10.0.84
       - openinference-instrumentation==0.1.18
       - openinference-instrumentation-langchain==0.1.29
-      - openinference-instrumentation-llama-index==3.0.3
-      - openinference-instrumentation-openai==0.1.17
+      - openinference-instrumentation-llama-index==3.0.4
+      - openinference-instrumentation-openai==0.1.18
       - openinference-semantic-conventions==0.1.12
       - opentelemetry-api==1.27.0
       - opentelemetry-exporter-otlp==1.27.0
@@ -222,7 +224,7 @@ dependencies:
       - opentelemetry-sdk==1.27.0
       - opentelemetry-semantic-conventions==0.48b0
       - opt-einsum==3.4.0
-      - orjson==3.10.11
+      - orjson==3.10.12
       - overrides==7.7.0
       - packaging==23.2
       - pandas==2.2.3
@@ -234,6 +236,7 @@ dependencies:
       - pip==24.3.1
       - platformdirs==4.3.6
       - pluggy==1.5.0
+      - plyfile==1.1
       - prometheus-client==0.21.0
       - prompt-toolkit==3.0.48
       - propcache==0.2.0
@@ -242,21 +245,21 @@ dependencies:
       - psutil==6.1.0
       - pure-eval==0.2.3
       - puremagic==1.28
-      - pyarrow==18.0.0
+      - pyarrow==18.1.0
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.1
       - pycodestyle==2.12.1
       - pycparser==2.22
-      - pydantic==2.9.2
-      - pydantic-core==2.23.4
+      - pydantic==2.10.2
+      - pydantic-core==2.27.1
       - pydantic-settings==2.6.1
-      - pydata-google-auth==1.8.2
+      - pydata-google-auth==1.9.0
       - pydeck==0.9.1
       - pyflakes==3.2.0
       - pygments==2.18.0
       - pylucidio==2.4
       - pyparsing==3.2.0
-      - pypdf==4.3.1
+      - pypdf==5.1.0
       - pyqtree==1.0.0
       - pyreadline3==3.5.4
       - pyserial==3.5
@@ -274,34 +277,35 @@ dependencies:
       - pyzmq==26.2.0
       - qrcode==8.0
       - referencing==0.35.1
-      - regex==2024.9.11
+      - regex==2024.11.6
       - requests==2.32.3
       - requests-oauthlib==2.0.0
       - requests-toolbelt==0.10.1
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
       - rich==13.9.4
-      - rpds-py==0.20.1
+      - rpds-py==0.21.0
       - rsa==4.9
-      - ruff==0.7.2
+      - ruff==0.8.0
       - scikit-image==0.24.0
       - scipy==1.14.1
       - segment-anything==1.0
       - send2trash==1.8.3
-      - setuptools==75.3.0
+      - setuptools==75.6.0
       - shapely==2.0.6
-      - simsimd==5.9.11
+      - simsimd==6.2.1
       - six==1.16.0
       - smmap==5.0.1
+      - snakeviz==2.2.2
       - sniffio==1.3.1
       - soupsieve==2.6
       - sqlalchemy==2.0.36
       - sqlite-fts4==1.0.3
       - sqlite-migrate==0.1b0
-      - sqlite-utils==3.37
+      - sqlite-utils==3.38
       - stack-data==0.6.3
-      - streamlit==1.39.0
-      - stringzilla==3.10.7
+      - streamlit==1.40.2
+      - stringzilla==3.10.10
       - striprtf==0.0.26
       - sympy==1.13.3
       - tabulate==0.9.0
@@ -312,14 +316,14 @@ dependencies:
       - tifffile==2024.9.20
       - tiktoken==0.8.0
       - tinycss2==1.4.0
-      - tokenizers==0.20.1
+      - tokenizers==0.21.0
       - toml==0.10.2
       - torch==2.4.1+cu124
       - torchaudio==2.4.1+cu124
-      - torchmetrics==1.5.1
+      - torchmetrics==1.6.0
       - torchvision==0.19.1+cu124
-      - tornado==6.4.1
-      - tqdm==4.66.6
+      - tornado==6.4.2
+      - tqdm==4.67.1
       - traitlets==5.14.3
       - types-python-dateutil==2.9.0.20241003
       - typing-extensions==4.12.2
@@ -331,14 +335,14 @@ dependencies:
       - urllib3==1.26.19
       - watchdog==5.0.3
       - wcwidth==0.2.13
-      - webcolors==24.8.0
+      - webcolors==24.11.1
       - webencodings==0.5.1
       - websocket-client==1.8.0
-      - werkzeug==3.1.1
-      - wheel==0.44.0
-      - wrapt==1.16.0
+      - werkzeug==3.1.3
+      - wheel==0.45.1
+      - wrapt==1.17.0
       - xlsxwriter==3.2.0
-      - yarl==1.17.1
+      - yarl==1.18.0
       - yoctopuce==2.0.62875
-      - zipp==3.20.2
+      - zipp==3.21.0
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_gpu
