--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -22,6 +22,7 @@ dependencies:
       - albumentations==1.4.23
       - altair==5.5.0
       - annotated-types==0.7.0
+      - ansicon==1.89.0
       - anthropic==0.42.0
       - anyio==4.7.0
       - arena-api==2.5.9
@@ -31,20 +32,24 @@ dependencies:
       - asttokens==3.0.0
       - async-lru==2.0.4
       - attrs==24.3.0
+      - azure-core==1.32.0
+      - azure-identity==1.19.0
       - babel==2.16.0
       - beautifulsoup4==4.12.3
       - bleach==6.2.0
+      - blessed==1.20.0
       - blinker==1.9.0
       - braincube-connector==2.6.0
       - cachetools==5.5.0
       - certifi==2024.12.14
       - cffi==1.17.1
       - charset-normalizer==3.4.0
-      - click==8.1.7
+      - click==8.1.8
       - click-default-group==1.2.4
       - colorama==0.4.6
       - comm==0.2.2
       - contourpy==1.3.1
+      - cryptography==44.0.0
       - cycler==0.12.1
       - cython==3.0.11
       - dataclasses-json==0.6.7
@@ -61,8 +66,9 @@ dependencies:
       - docutils==0.21.2
       - durationpy==0.9
       - email-validator==2.2.0
-      - eval-type-backport==0.2.0
+      - eval-type-backport==0.2.2
       - executing==2.1.0
+      - fastavro==1.10.0
       - fastjsonschema==2.21.1
       - filelock==3.16.1
       - filetype==1.2.0
@@ -124,12 +130,14 @@ dependencies:
       - jax==0.4.38
       - jaxlib==0.4.38
       - jedi==0.19.2
-      - jinja2==3.1.4
+      - jinja2==3.1.5
+      - jinxed==1.3.0
       - jiter==0.8.2
       - joblib==1.4.2
       - json-numpy==2.1.0
       - json5==0.10.0
       - jsonpatch==1.33
+      - jsonpath-python==1.0.6
       - jsonpointer==3.0.0
       - jsonschema==4.23.0
       - jsonschema-specifications==2024.10.1
@@ -146,9 +154,9 @@ dependencies:
       - jupyterlab==4.3.4
       - jupyterlab-pygments==0.3.0
       - jupyterlab-server==2.27.3
-      - kfp==2.7.0
-      - kfp-pipeline-spec==0.3.0
-      - kfp-server-api==2.0.5
+      - kfp==2.10.1
+      - kfp-pipeline-spec==0.5.0
+      - kfp-server-api==2.3.0
       - kiwisolver==1.4.7
       - kubernetes==26.1.0
       - langchain==0.1.20
@@ -158,10 +166,10 @@ dependencies:
       - langchain-text-splitters==0.0.2
       - langsmith==0.1.129
       - lazy-loader==0.4
-      - lightning==2.4.0
+      - lightning==2.5.0
       - lightning-utilities==0.11.9
       - llama-cloud==0.1.6
-      - llama-cpp-python==0.3.2
+      - llama-cpp-python==0.3.5
       - llama-index==0.11.23
       - llama-index-agent-openai==0.3.4
       - llama-index-cli==0.3.1
@@ -192,10 +200,13 @@ dependencies:
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
       - mdurl==0.1.2
+      - mistralai==1.2.5
       - mistune==3.0.2
       - mkl==2025.0.1
       - ml-dtypes==0.5.0
       - mpmath==1.3.0
+      - msal==1.31.1
+      - msal-extensions==1.2.0
       - multidict==6.1.0
       - mypy-extensions==1.0.0
       - narwhals==1.19.0
@@ -206,7 +217,7 @@ dependencies:
       - networkx==3.4.2
       - nltk==3.9.1
       - nodeenv==1.9.1
-      - notebook==7.3.1
+      - notebook==7.3.2
       - notebook-shim==0.2.4
       - numba==0.60.0
       - numpy==1.26.4
@@ -218,7 +229,7 @@ dependencies:
       - opencv-python-headless==4.10.0.84
       - openinference-instrumentation==0.1.20
       - openinference-instrumentation-langchain==0.1.29
-      - openinference-instrumentation-llama-index==3.1.1
+      - openinference-instrumentation-llama-index==3.1.2
       - openinference-instrumentation-openai==0.1.18
       - openinference-semantic-conventions==0.1.12
       - opentelemetry-api==1.27.0
@@ -237,6 +248,7 @@ dependencies:
       - pandas==2.2.3
       - pandas-gbq==0.26.0
       - pandocfilters==1.5.1
+      - parameterized==0.9.0
       - parso==0.8.4
       - persist-queue==1.0.0
       - pillow==11.0.0
@@ -245,6 +257,7 @@ dependencies:
       - platformdirs==4.3.6
       - pluggy==1.5.0
       - plyfile==1.1
+      - portalocker==2.10.1
       - prometheus-client==0.21.1
       - prompt-toolkit==3.0.48
       - propcache==0.2.1
@@ -265,6 +278,7 @@ dependencies:
       - pydeck==0.9.1
       - pyflakes==3.2.0
       - pygments==2.18.0
+      - pyjwt==2.10.1
       - pylucidio==2.4
       - pyparsing==3.2.0
       - pypdf==5.1.0
@@ -277,7 +291,7 @@ dependencies:
       - python-dotenv==1.0.1
       - python-json-logger==3.2.1
       - python-ulid==3.0.0
-      - pytorch-lightning==2.4.0
+      - pytorch-lightning==2.5.0
       - pytz==2024.2
       - pywin32==308
       - pywinpty==2.0.14
@@ -296,10 +310,13 @@ dependencies:
       - rpds-py==0.22.3
       - rsa==4.9
       - ruff==0.8.4
+      - safetensors==0.4.5
       - scikit-image==0.25.0
+      - scikit-learn==1.6.0
       - scipy==1.14.1
       - segment-anything==1.0
       - send2trash==1.8.3
+      - sentence-transformers==3.3.1
       - setuptools==75.6.0
       - shapely==2.0.6
       - simsimd==6.2.1
@@ -322,6 +339,7 @@ dependencies:
       - tcmlib==1.2.0
       - tenacity==8.5.0
       - terminado==0.18.1
+      - threadpoolctl==3.5.0
       - tifffile==2024.12.12
       - tiktoken==0.8.0
       - tinycss2==1.4.0
@@ -334,6 +352,7 @@ dependencies:
       - tornado==6.4.2
       - tqdm==4.67.1
       - traitlets==5.14.3
+      - transformers==4.47.1
       - types-python-dateutil==2.9.0.20241206
       - typing-extensions==4.12.2
       - typing-inspect==0.9.0
