--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -29,24 +29,31 @@ dependencies:
       - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
       - arrow==1.3.0
+      - asgiref==3.8.1
       - asttokens==3.0.0
       - async-lru==2.0.4
       - attrs==24.3.0
       - azure-core==1.32.0
       - azure-identity==1.19.0
       - babel==2.16.0
+      - backoff==2.2.1
+      - bcrypt==4.2.1
       - beautifulsoup4==4.12.3
       - bleach==6.2.0
       - blessed==1.20.0
       - blinker==1.9.0
       - braincube-connector==2.6.0
+      - build==1.2.2.post1
       - cachetools==5.5.0
       - certifi==2024.12.14
       - cffi==1.17.1
       - charset-normalizer==3.4.0
+      - chroma-hnswlib==0.7.6
+      - chromadb==0.6.0
       - click==8.1.8
       - click-default-group==1.2.4
       - colorama==0.4.6
+      - coloredlogs==15.0.1
       - comm==0.2.2
       - contourpy==1.3.1
       - cryptography==44.0.0
@@ -68,12 +75,14 @@ dependencies:
       - email-validator==2.2.0
       - eval-type-backport==0.2.2
       - executing==2.1.0
+      - fastapi==0.115.6
       - fastavro==1.10.0
       - fastjsonschema==2.21.1
       - filelock==3.16.1
       - filetype==1.2.0
       - flake8==7.1.1
       - flask==3.1.0
+      - flatbuffers==24.12.23
       - fonttools==4.55.3
       - fpdf2==2.8.2
       - fqdn==1.5.1
@@ -109,9 +118,11 @@ dependencies:
       - h5py==3.12.1
       - httpcore==1.0.5
       - httplib2==0.22.0
+      - httptools==0.6.4
       - httpx==0.27.2
       - httpx-sse==0.4.0
       - huggingface-hub==0.27.0
+      - humanfriendly==10.0
       - idna==3.10
       - ijson==3.3.0
       - imageio==2.36.1
@@ -204,6 +215,8 @@ dependencies:
       - mistune==3.0.2
       - mkl==2025.0.1
       - ml-dtypes==0.5.0
+      - mmh3==5.0.1
+      - monotonic==1.6
       - mpmath==1.3.0
       - msal==1.31.1
       - msal-extensions==1.2.0
@@ -223,6 +236,7 @@ dependencies:
       - numpy==1.26.4
       - oauthlib==3.2.2
       - ollama==0.4.4
+      - onnxruntime==1.20.1
       - openai==1.58.1
       - opencv-contrib-python==4.10.0.84
       - opencv-python==4.10.0.84
@@ -238,9 +252,12 @@ dependencies:
       - opentelemetry-exporter-otlp-proto-grpc==1.27.0
       - opentelemetry-exporter-otlp-proto-http==1.27.0
       - opentelemetry-instrumentation==0.48b0
+      - opentelemetry-instrumentation-asgi==0.48b0
+      - opentelemetry-instrumentation-fastapi==0.48b0
       - opentelemetry-proto==1.27.0
       - opentelemetry-sdk==1.27.0
       - opentelemetry-semantic-conventions==0.48b0
+      - opentelemetry-util-http==0.48b0
       - opt-einsum==3.4.0
       - orjson==3.10.12
       - overrides==7.7.0
@@ -258,6 +275,7 @@ dependencies:
       - pluggy==1.5.0
       - plyfile==1.1
       - portalocker==2.10.1
+      - posthog==3.7.4
       - prometheus-client==0.21.1
       - prompt-toolkit==3.0.48
       - propcache==0.2.1
@@ -282,6 +300,8 @@ dependencies:
       - pylucidio==2.4
       - pyparsing==3.2.0
       - pypdf==5.1.0
+      - pypika==0.48.9
+      - pyproject-hooks==1.2.0
       - pyqtree==1.0.0
       - pyreadline3==3.5.4
       - pyright==1.1.391
@@ -319,6 +339,7 @@ dependencies:
       - sentence-transformers==3.3.1
       - setuptools==75.6.0
       - shapely==2.0.6
+      - shellingham==1.5.4
       - simsimd==6.2.1
       - six==1.17.0
       - smmap==5.0.1
@@ -330,6 +351,7 @@ dependencies:
       - sqlite-migrate==0.1b0
       - sqlite-utils==3.38
       - stack-data==0.6.3
+      - starlette==0.41.3
       - streamlit==1.41.1
       - stringzilla==3.11.2
       - striprtf==0.0.26
@@ -353,6 +375,7 @@ dependencies:
       - tqdm==4.67.1
       - traitlets==5.14.3
       - transformers==4.47.1
+      - typer==0.15.1
       - types-python-dateutil==2.9.0.20241206
       - typing-extensions==4.12.2
       - typing-inspect==0.9.0
@@ -361,7 +384,9 @@ dependencies:
       - uri-template==1.3.0
       - uritemplate==4.1.1
       - urllib3==1.26.19
+      - uvicorn==0.34.0
       - watchdog==6.0.0
+      - watchfiles==1.0.3
       - wcwidth==0.2.13
       - webcolors==24.11.1
       - webencodings==0.5.1
