--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -221,6 +221,7 @@ dependencies:
       - mkl==2025.0.1
       - ml-dtypes==0.5.1
       - mmh3==5.1.0
+      - mobile-sam==1.0
       - monotonic==1.6
       - more-itertools==10.5.0
       - mpmath==1.3.0
@@ -376,6 +377,7 @@ dependencies:
       - threadpoolctl==3.5.0
       - tifffile==2025.1.10
       - tiktoken==0.8.0
+      - timm==1.0.15
       - tinycss2==1.4.0
       - tokenizers==0.21.0
       - toml==0.10.2
