install pytorch* +cu129

--- a/architecture/Windows-x86_64/py313_win_x86_64_multi_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py313_win_x86_64_multi_conda_env_export.yml
@@ -463,9 +463,10 @@ dependencies:
       - tomli==2.3.0
       - tomli-w==1.2.0
       - tomlkit==0.13.3
-      - torch==2.9.0
+      - torch==2.8.0+cu129
+      - torchaudio==2.8.0+cu129
       - torchmetrics==1.8.2
-      - torchvision==0.24.0
+      - torchvision==0.23.0+cu129
       - tornado==6.5.2
       - tqdm==4.67.1
       - traitlets==5.14.3
